kubernetes/flux-system/capacitor/deploy-add-sablier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: capacitor
  labels:
    sablier.enable: "true"
    sablier.group: capacitor
selector:
  matchLabels:
    app.kubernetes.io/instance: kubernetes-dashboard
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubernetes-dashboard
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kubernetes-dashboard
  autoscaler:
    enabled: true
    minReplicas: 0
    maxReplicas: 1
