kubernetes/flux-system/capacitor/capacitor-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: capacitor
  name: capacitor
  namespace: flux-system
spec:
  ports:
  - name: http
    targetPort: 9000
    port: 80
  selector:
    app: capacitor
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-https
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
spec:
  tls:
  - secretName: capacitor-bas-tls
  rules:
  - host: capacitor.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capacitor
            port:
              number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capacitor-http
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: "web"
    traefik.ingress.kubernetes.io/router.middlewares: "traefik-http-redirect-to-https@kubernetescrd"
spec:
  rules:
  - host: capacitor.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: capacitor
            port:
              number: 80
